[HAR-6304]: Execute the manager from the code (#5012)
* [HAR-6304]: Execute the manager from the code